# alliander-workshop-tdd

./: .pre-commit-config.yaml  README.md  install.ps1  install.sh  marp.config.js  package-lock.json  package.json  pyproject.toml  slide_builder.md  tdd-exercises.md
slides/: tdd.html  tdd.md
themes/: graph_paper.css  monokai.css
